--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,11 @@ dependencies:
   # Selección de archivos
   file_picker: ^8.1.3
 
-  # Autenticación y servicios de Google
+  # Firebase Core - NUEVO
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
-  googleapis: ^13.2.0
-  googleapis_auth: ^1.6.0
+  cloud_firestore: ^5.5.2 # Para guardar datos de usuario
 
   # HTTP y networking
   http: ^1.2.2
@@ -30,7 +31,7 @@ dependencies:
   # Sistema de archivos
   path_provider: ^2.1.5
 
-  # AWS Amplify - ACTUALIZADO a versiones más recientes
+  # AWS Amplify
   amplify_flutter: ^2.7.0
   amplify_storage_s3: ^2.7.0
   amplify_core: ^2.7.0
